# ActivityWatcher

./: CMakeLists.txt  CMakeSettings.json
src/: CMakeLists.txt
src/global/: exitCodes.hpp  utility.hpp
src/watcher/: CMakeLists.txt  application.cpp  application.h  main.cpp  watcher.hpp  watcherApp.h
